--- a/agenda/src/main/resources/com/mycompany/agenda/EstiloGestorContacto.fxml
+++ b/agenda/src/main/resources/com/mycompany/agenda/EstiloGestorContacto.fxml
@@ -24,7 +24,7 @@
          <children>
             <HBox alignment="CENTER" layoutX="1.0" prefHeight="36.0" prefWidth="336.0">
                <children>
-                  <TextField alignment="CENTER_RIGHT" opacity="0.46" prefHeight="23.0" prefWidth="321.0" text="Buscar">
+                  <TextField fx:id="txtBuscar" alignment="CENTER_RIGHT" opacity="0.46" prefHeight="23.0" prefWidth="321.0" text="Buscar">
                      <font>
                         <Font size="10.0" />
                      </font>
@@ -66,11 +66,35 @@
                   <Label prefHeight="18.0" prefWidth="61.0" />
                </children>
             </HBox>
-            <TabPane layoutX="1.0" layoutY="33.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="516.0" prefWidth="336.0" tabClosingPolicy="UNAVAILABLE">
+            <TabPane layoutX="1.0" layoutY="33.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="592.0" prefWidth="336.0" tabClosingPolicy="UNAVAILABLE">
               <tabs>
                 <Tab fx:id="tabpersona" text="Personas">
                      <content>
-                        <Pane prefHeight="500.0" prefWidth="336.0" />
+                        <Pane fx:id="PaneContactos" prefHeight="200.0" prefWidth="200.0">
+                           <children>
+                              <Button fx:id="upContactsButton" disable="true" layoutX="153.0" layoutY="-3.0" mnemonicParsing="false" onAction="#retrocederContactos" opacity="0.0" prefHeight="24.0" prefWidth="30.0">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                              </Button>
+                              <ImageView fitHeight="18.0" fitWidth="22.0" layoutX="158.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../../../img/up.png" />
+                                 </image>
+                              </ImageView>
+                              <VBox fx:id="contactosVBox" fillWidth="false" layoutX="3.0" layoutY="36.0" maxHeight="600.0" minHeight="0.0" prefHeight="501.0" prefWidth="336.0" />
+                              <Button fx:id="downContactsButton" disable="true" layoutX="150.0" layoutY="528.0" mnemonicParsing="false" onAction="#avanzarContactos" opacity="0.0" prefHeight="36.0" prefWidth="30.0">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                              </Button>
+                              <ImageView fitHeight="18.0" fitWidth="22.0" layoutX="156.0" layoutY="539.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../../../img/down.png" />
+                                 </image>
+                              </ImageView>
+                           </children>
+                        </Pane>
                      </content>
                   </Tab>
                 <Tab fx:id="tabempresa" text="Empresas" />
@@ -145,7 +169,7 @@
                      <children>
                         <ImageView fitHeight="105.0" fitWidth="178.0">
                            <image>
-                              <Image url="@../../../../../../../../../../../../../../../Pictures/Saved%20Pictures/curso-de-git-y-github.png" />
+                              <Image url="@../../../img/1.gif" />
                            </image>
                         </ImageView>
                      </children>
