--- a/agenda/src/main/resources/com/mycompany/agenda/EstiloGestorContacto.fxml
+++ b/agenda/src/main/resources/com/mycompany/agenda/EstiloGestorContacto.fxml
@@ -35,6 +35,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
@@ -284,7 +285,7 @@
                            </cursor>
                         </Button>
                         <Label text="Contactos Relacionados" />
-                        <VBox fx:id="fechasVBox1" alignment="CENTER">
+                        <VBox fx:id="contactosRelacionadosVBox" alignment="CENTER">
                            <children>
                               <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                                  <children>
@@ -299,7 +300,8 @@
                               </HBox>
                            </children>
                         </VBox>
-                        <Button fx:id="addAtributteButton111" mnemonicParsing="false" onAction="#addAtributte" text="Vincular contacto">
+                        <ComboBox fx:id="contactosRelacionadosComboBox" prefWidth="150.0" />
+                        <Button fx:id="addContactoVinculadoButton" mnemonicParsing="false" onAction="#addContactoVinculado" text="Vincular contacto">
                            <graphic>
                               <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
