--- a/agenda/src/main/resources/com/mycompany/agenda/EstiloGestorContacto.fxml
+++ b/agenda/src/main/resources/com/mycompany/agenda/EstiloGestorContacto.fxml
@@ -37,6 +37,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.SplitPane?>
@@ -49,7 +51,7 @@
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="720.0" maxWidth="900.0" minHeight="720.0" minWidth="900.0" prefHeight="720.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.agenda.ContactosController">
+<VBox maxHeight="720.0" maxWidth="900.0" minHeight="720.0" minWidth="900.0" prefHeight="720.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.agenda.ContactosController">
   <children>
       <VBox alignment="CENTER" prefHeight="32.0" prefWidth="900.0">
          <children>
@@ -136,7 +138,7 @@
                   <Separator opacity="0.0" orientation="VERTICAL" prefHeight="150.0" />
                   <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                      <children>
-                        <Button fx:id="addContactButton" mnemonicParsing="false" text="Agregar contacto">
+                        <Button fx:id="addContactButton" mnemonicParsing="false" onAction="#crearcontacto" text="Agregar contacto">
                            <graphic>
                               <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
@@ -148,6 +150,21 @@
                               <Cursor fx:constant="HAND" />
                            </cursor>
                         </Button>
+                        <MenuButton fx:id="MenuOrdenar" mnemonicParsing="false" popupSide="RIGHT" prefHeight="48.0" prefWidth="116.0" text="Ordenar">
+                           <items>
+                              <MenuItem fx:id="ItemNombre" mnemonicParsing="false" onAction="#OrdenarNombre" text="Nombre" />
+                              <MenuItem fx:id="ItemApellido" mnemonicParsing="false" onAction="#OrdenarApellido" text="Apellido" />
+                              <MenuItem fx:id="ItemFecha" mnemonicParsing="false" onAction="#OrdenarFecha" text="Fecha" />
+                              <MenuItem fx:id="ItemDirección" mnemonicParsing="false" onAction="#OrdenarDireccion" text="Dirección" />
+                           </items>
+                           <graphic>
+                              <ImageView fitHeight="29.0" fitWidth="31.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../../../img/Recurso%205.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </MenuButton>
                      </children>
                   </HBox>
                </children>
